fixed bug on iPhone 5 where page height was too small

--- a/scss/about.scss
+++ b/scss/about.scss
@@ -7,7 +7,7 @@
 }
 
 #main-content {
-  margin-bottom: 5rem;
+  margin-bottom: 64px;
   // Stylng titles
   h1 {
     display: inline;
